# spqrtree

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  pyproject.toml
docs/source/: changelog.rst  conf.py  index.rst  intro.rst  modules.rst  spqrtree.rst
src/spqrtree/: __init__.py  _graph.py  _palm_tree.py  _spqr.py  _triconnected.py
tests/: test_graph.py  test_palm_tree.py  test_spqrtree.py  test_triconnected.py
