# Pure Python SPQR-Tree implementation.
# Authors:
#   imacat@mail.imacat.idv.tw (imacat), 2026/3/2
# AI assistance: Claude Code (Anthropic)

#  Copyright (c) 2026 imacat.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[project]
name = "spqrtree"
dynamic = ["version"]
description = "Pure Python SPQR-Tree implementation"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "imacat", email = "imacat@mail.imacat.idv.tw" },
]
keywords = [
    "spqr",
    "spqr-tree",
    "graph",
    "triconnected",
    "triconnectivity",
    "graph-decomposition",
    "biconnected",
    "separation-pair",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/imacat/spqrtree"
Repository = "https://github.com/imacat/spqrtree"
Documentation = "https://spqrtree.readthedocs.io"
"Change Log" = "https://spqrtree.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/imacat/spqrtree/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "spqrtree.VERSION"}
